[metadata]
name = niioverlay
description = Create NIfTI overlay images by combining a base structural image with a coregistered map
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SWastling/niioverlay
author = Stephen Wastling
author_email = stephen.wastling@nhs.net
license = MIT
classifiers = 
	Development Status :: 5 - Alpha
	Environment :: Console
	License :: OSI Approved :: MIT License
	Operating System :: POSIX
	Programming Language :: Python
    Programming Language :: Python :: 3.7, 3.8, 3.9
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
package_dir = 
	= src
packages = find:
install_requires =
    nibabel == 3.2.1
    numpy == 1.21.5

[options.packages.find]
where = src
exclude = tests

[options.entry_points]
console_scripts = 
	niioverlay = niioverlay.niioverlay:main

[egg_info]
tag_build = 
tag_date = 0

